# functional-programming

lab1/: README.md  lab1.cabal  stack.yaml
lab1/app/: Main.hs
lab1/sql_queries/: create_tables.sql  fill_tables.sql
lab1/src/: CRUD.hs  ClassesTable.hs  ClassroomsTable.hs  Database.hs  LessonsTable.hs  SeatsTable.hs  TablesPrint.hs  UserTable.hs  UsersLessonsTable.hs
lab2/: .gitignore  lab2.cabal
lab2/app/: Main.hs
lab2/src/: SimpsonIntegration.hs
