cabal-version: 1.12

name:           lab2
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/lab2#readme>
homepage:       https://github.com/KateRepekh/functional-programming/lab2
bug-reports:    https://github.com/KateRepekh/functional-programming/lab2/issues
author:         Kateryna Repekh
maintainer:     krepekh@gmail.com
copyright:      2020 Kateryna Repekh
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/KateRepekh/functional-programming/lab2

library
  exposed-modules:
      SimpsonIntegration
  other-modules:
      Paths_lab2
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , parallel
  default-language: Haskell2010

executable lab2-exe
  main-is: Main.hs
  other-modules:
      Paths_lab2
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lab2
  default-language: Haskell2010